name:                poker
version:             0.0.1
synopsis: secure poker protocol
-- description:
homepage:            https://github.com/vincenthz/poker#readme
license:             BSD3
license-file:        LICENSE
author:              Vincent Hanquez
maintainer:          vincent@typed.io
copyright:           Vincent Hanquez
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.Poker
                       Crypto.Poker.Protocol
                       Crypto.Poker.Game
                       Crypto.Poker.Tests
                       Crypto.Poker.Card
                       Crypto.Poker.Hand
  other-modules:
                       Crypto.Poker.Ledger
  build-depends:       base >= 4.7 && < 6
                     , memory
                     , deepseq
                     , binary
                     , bytestring
                     , cryptonite
                     , cryptonite-openssl >= 0.3
                     , integer-gmp
                     , ghc-prim
                     , foundation >= 0.0.20
                     , basement >= 0.0.7
                     , shuffle-proof
                     , casino-prim
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings

  if impl(ghc < 8.0)
     Buildable:        False

executable poker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , basement
                     , cryptonite
                     , foundation
                     , poker
  default-language:    Haskell2010

test-suite poker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , poker
                     , foundation >= 0.0.16
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bench
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchs
  buildable:           True
  build-depends:       base >= 4, basement, foundation, casino-prim, shuffle-proof, poker, deepseq, gauge, cryptonite
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vincenthz/poker
